Increase the width of the active hours text

--- a/octoprint_FriendlyBeeper/templates/FriendlyBeeper_settings.jinja2
+++ b/octoprint_FriendlyBeeper/templates/FriendlyBeeper_settings.jinja2
@@ -19,7 +19,7 @@
 
         <div class="controls">
             <div class="input-append">
-                <input type="time" step="60" class="input-mini text-left" data-bind="value: settings.plugins.FriendlyBeeper.start_time">
+                <input type="time" step="60" class="input-medium text-left" data-bind="value: settings.plugins.FriendlyBeeper.start_time">
             </div>
         </div>
 
@@ -29,7 +29,7 @@
 
         <div class="controls">
             <div class="input-append">
-                <input type="time" step="60" class="input-mini text-left" data-bind="value: settings.plugins.FriendlyBeeper.end_time">
+                <input type="time" step="60" class="input-medium text-left" data-bind="value: settings.plugins.FriendlyBeeper.end_time">
             </div>
         </div>
     </div>
