Add the ability to have a test button for the beeper

--- a/octoprint_FriendlyBeeper/templates/FriendlyBeeper_settings.jinja2
+++ b/octoprint_FriendlyBeeper/templates/FriendlyBeeper_settings.jinja2
@@ -3,8 +3,8 @@
 <form class="form-horizontal">
     <h4>{{ _('Current Time') }} </h4>
     <div class="control-group">
-        <input type="text" class="text-left" data-bind="value: settings.plugins.FriendlyBeeper.current" disabled>
-        <input type="text" class="input-mini text-left" data-bind="value: settings.plugins.FriendlyBeeper.timezone" disabled>
+        <input type="text" class="text-left" data-bind="value: current" disabled>
+        <input type="text" class="input-mini text-left" data-bind="value: timezone" disabled>
 
         <label>
             {{ _('If the above time doesn\'t match reality, you\'ll need to resync OctoPrint\'s clock, or set your timezone. On Raspberry Pi based systems, this may mean running raspi-config') }}
@@ -19,7 +19,7 @@
 
         <div class="controls">
             <div class="input-append">
-                <input type="time" step="60" class="input-medium text-left" data-bind="value: settings.plugins.FriendlyBeeper.start_time">
+                <input type="time" step="60" class="input-medium text-left" data-bind="value: start_time">
             </div>
         </div>
 
@@ -29,7 +29,7 @@
 
         <div class="controls">
             <div class="input-append">
-                <input type="time" step="60" class="input-medium text-left" data-bind="value: settings.plugins.FriendlyBeeper.end_time">
+                <input type="time" step="60" class="input-medium text-left" data-bind="value: end_time">
             </div>
         </div>
     </div>
@@ -43,7 +43,7 @@
 
         <div class="controls">
             <div class="input-append">
-                <input type="number" step="10" class="input-mini text-left" data-bind="value: settings.plugins.FriendlyBeeper.frequency">
+                <input type="number" step="10" class="input-mini text-left" data-bind="value: frequency">
             </div>
         </div>
 
@@ -53,7 +53,7 @@
 
         <div class="controls">
             <div class="input-append">
-                <input type="number" step="100" class="input-mini text-left" data-bind="value: settings.plugins.FriendlyBeeper.duration">
+                <input type="number" step="100" class="input-mini text-left" data-bind="value: duration">
             </div>
         </div>
 
@@ -64,7 +64,7 @@
         <div class="control-group">
             <div class="controls">
                 <label class="checkbox">
-                    <input type="checkbox" data-bind="checked: settings.plugins.FriendlyBeeper.notify_on_pause"> {{ _('When the print is paused, either through OctoPrint or through a <a href="http://docs.octoprint.org/en/master/configuration/config_yaml.html#serial">pausing command</a>, trigger a beep') }}
+                    <input type="checkbox" data-bind="checked: notify_on_pause"> {{ _('When the print is paused, either through OctoPrint or through a <a href="http://docs.octoprint.org/en/master/configuration/config_yaml.html#serial">pausing command</a>, trigger a beep') }}
                     <div class="help-block">
                         {{ _('This may need to be configured under the Printer -> Serial Connection -> Firmware & protocol -> Pausing commands')}}
                     </div>
@@ -79,7 +79,7 @@
         <div class="control-group">
             <div class="controls">
                 <label class="checkbox">
-                    <input type="checkbox" data-bind="checked: settings.plugins.FriendlyBeeper.wait_for_cooldown"> {{ _('After the print has finished, wait for the bed to cooldown before triggering the beep') }}
+                    <input type="checkbox" data-bind="checked: wait_for_cooldown"> {{ _('After the print has finished, wait for the bed to cooldown before triggering the beep') }}
                 </label>
 
             </div>
@@ -92,9 +92,15 @@
         <div class="control-group">
             <div class="controls">
                 <label class="input-append">
-                    <input type="number" step="5" class="input-mini text-left" data-bind="value: settings.plugins.FriendlyBeeper.bed_cool_to, enabled: settings.plugins.FriendlyBeeper.wait_for_cooldown"> {{ _('C') }}
+                    <input type="number" step="5" class="input-mini text-left" data-bind="value: bed_cool_to, enable: wait_for_cooldown"> {{ _('C') }}
                 </label>
             </div>
         </div>
+    </div>
+
+    <div class="control-group">
+        <button class="btn btn-primary" data-bind="click: beep_test">{{ _('Test') }} </button>
+        <span data-bind="text: beep_test_result"></span>
+        <div class="help-block">{{ _('This will test the beep and obey the above active hours. It won\'t check bed temperature')}}</div>
     </div>
 </form>
