--- a/octoprint_FriendlyBeeper/templates/FriendlyBeeper_settings.jinja2
+++ b/octoprint_FriendlyBeeper/templates/FriendlyBeeper_settings.jinja2
@@ -34,46 +34,53 @@
         </div>
     </div>
 
-    <h4>{{ _('Beep Settings') }} </h4>
-
+    <h4>{{ _('Beep Tone Settings') }} </h4>
     <div class="control-group">
-        <label class="control-label" data-bind="hidden: use_custom_tone">
+        <div class="control-group">
+            <label class="control-label">{{ _('Beep Method')}}</label>
+            <div class="controls">
+                <label class="radio">
+                    <input type="radio" name="pluginFriendlyBeeperMethod" value="single" data-bind="checked: beep_method"> {{ _('Generate a single beep/tone on print completion') }}
+                </label>
+                <label class="radio">
+                    <input type="radio" name="pluginFriendlyBeeperMethod" value="custom" data-bind="checked: beep_method"> {{ _('Play Custom Gcode on print completion') }}
+                </label>
+            </div>
+        </div>
+
+        <label class="control-label" data-bind="if: beep_method() === 'single'">
             {{ _('Frequency (Hz)') }}
         </label>
 
-        <div class="controls" data-bind="hidden: use_custom_tone">
+        <div class="controls" data-bind="if: beep_method() === 'single'">
             <div class="input-append">
                 <input type="number" step="10" class="input-mini text-left" data-bind="value: frequency">
             </div>
         </div>
 
-        <label class="control-label" data-bind="hidden: use_custom_tone">
+        <label class="control-label" data-bind="if: beep_method() === 'single'">
             {{ _('Duration (Milliseconds)') }}
         </label>
 
-        <div class="controls" data-bind="hidden: use_custom_tone">
+        <div class="controls" data-bind="if: beep_method() === 'single'">
             <div class="input-append">
                 <input type="number" step="100" class="input-mini text-left" data-bind="value: duration">
             </div>
         </div>
 
-        <label class="control-label">
-            {{ _('Use Custom GCode Tone') }}
+        <label class="control-label" data-bind="if: beep_method() === 'custom'" style="display: contents;">
+            {{ _('GCode Commands for Custom Tone') }}
         </label>
 
-        <div class="control-group">
-            <div class="controls">
-                <label class="checkbox">
-                    <input type="checkbox" data-bind="checked: use_custom_tone"> Use custom tone
-                </label>
+        <div class="controls">
+            <div class="control-group" data-bind="if: beep_method() === 'custom'">
+                <textarea class="input-block-level" rows="6" data-bind="value: custom_tone"></textarea>
             </div>
         </div>
+    </div>
 
-        <div class="control-group" data-bind="visible: use_custom_tone">
-            <label for=""> {{ _ ('GCode Commands for Custom Tone') }}</label>
-            <textarea class="input-block-level" rows="6" data-bind="value: custom_tone"></textarea>
-        </div>
-
+    <h4>{{ _('Beep Settings') }} </h4>
+    <div class="control-group">
         <label class="control-label">
             {{ _('Notify On Pause') }}
         </label>
@@ -102,22 +109,28 @@
             </div>
         </div>
 
-        <label class="control-label">
+        <label class="control-label" data-bind="if: wait_for_cooldown">
             {{ _('Target Bed Temp') }}
         </label>
 
-        <div class="control-group">
+        <div class="control-group" data-bind="if: wait_for_cooldown">
             <div class="controls">
                 <label class="input-append">
                     <input type="number" step="5" class="input-mini text-left" data-bind="value: bed_cool_to, enable: wait_for_cooldown"> {{ _('C') }}
                 </label>
             </div>
         </div>
-    </div>
 
-    <div class="control-group">
-        <button class="btn btn-primary" data-bind="click: beep_test">{{ _('Test') }} </button>
-        <span data-bind="text: beep_test_result"></span>
-        <div class="help-block">{{ _('This will test current settings for the beep (including active hours). If <i>Wait For Cooldown</i> is enabled, it will check the bed temperature, but it won\'t wait for it to cooldown.')}}</div>
+        <label class="control-label">
+            {{ _('Test Beep') }}
+        </label>
+
+        <div class="control-group">
+            <div class="controls">
+                <button class="btn btn-primary" data-bind="click: beep_test">{{ _('Trigger Beep') }} </button>
+                <span data-bind="text: beep_test_result"></span>
+                <div class="help-block">{{ _('This will test current settings for the beep (including active hours). If <i>Wait For Cooldown</i> is enabled, it will check the bed temperature, but it won\'t wait for it to cooldown.')}}</div>
+            </div>
+        </div>
     </div>
 </form>
