--- a/octoprint_FriendlyBeeper/templates/FriendlyBeeper_settings.jinja2
+++ b/octoprint_FriendlyBeeper/templates/FriendlyBeeper_settings.jinja2
@@ -54,7 +54,7 @@
 
         <div class="controls" data-bind="if: beep_method() === 'single'">
             <div class="input-append">
-                <input type="number" min="1" step="10" class="input-mini text-left" data-bind="value: frequency">
+                <input type="number" min="10" max="3000" step="10" class="input-mini text-left" data-bind="value: frequency">
             </div>
         </div>
 
@@ -64,7 +64,7 @@
 
         <div class="controls" data-bind="if: beep_method() === 'single'">
             <div class="input-append">
-                <input type="number" min="1" max="3500" step="100" class="input-mini text-left" data-bind="value: duration">
+                <input type="number" min="100" max="3500" step="100" class="input-mini text-left" data-bind="value: duration">
             </div>
         </div>
 
